--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -114,14 +114,14 @@ jobs:
           node dist-cli/cli.mjs --help
 
       - name: Publish to npm (dry run)
-        if: ${{ github.event.inputs.dry_run == true }}
+        if: ${{ inputs.dry_run }}
         run: npm publish --dry-run --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # First-time publish: Use NPM_TOKEN without provenance (OIDC not yet configured)
       - name: Publish to npm (first time - with token)
-        if: ${{ github.event.inputs.dry_run != true && github.event.inputs.first_publish == true }}
+        if: ${{ !inputs.dry_run && inputs.first_publish }}
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -129,13 +129,13 @@ jobs:
       # Subsequent publishes: Use OIDC provenance (preferred - no token needed once configured)
       # Falls back to NPM_TOKEN if OIDC is not yet configured
       - name: Publish to npm (with provenance)
-        if: ${{ github.event.inputs.dry_run != true && github.event.inputs.first_publish != true }}
+        if: ${{ !inputs.dry_run && !inputs.first_publish }}
         run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        if: ${{ github.event.inputs.dry_run != true && startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ !inputs.dry_run && startsWith(github.ref, 'refs/tags/') }}
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
